--- a/aboutme.html
+++ b/aboutme.html
@@ -8,6 +8,9 @@
 <body>
     <h1>About Jason</h1>
     <img src="csc pic 1.jpeg" alt="">
+    <a href="aboutme.html"><img src="button2.png" alt=""></a>
+    <a href="javascripts.html"><img src="button3.png"></a> 
+    <a href="index.html"><img src="buttons.png"></a>
     <h2>Jason's Hobbies</h2>
     <ul>
         <li>Basketball</li>
