--- a/javascripts.html
+++ b/javascripts.html
@@ -3,15 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jason's Website</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
     <img src="csc pic 1.jpeg" alt="">
     <a href="aboutme.html"><img src="button2.png" alt=""></a>
     <a href="javascripts.html"><img src="button3.png"></a> 
     <a href="index.html"><img src="buttons.png"></a>
-    <p>Welcome to my website!</p>
-    <p>Thanks for visiting. To learn more about me <a href="aboutme.html">click here</a> 
 </body>
 </html>
