--- a/index.html
+++ b/index.html
@@ -4,14 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jason's Website</title>
+    <link rel ="stylesheet" href="mystyle.css">
 </head>
 <body>
     <h1>Hello World!</h1>
-    <img src="csc pic 1.jpeg" alt="">
-    <a href="aboutme.html"><img src="button2.png" alt=""></a>
-    <a href="javascripts.html"><img src="button3.png"></a> 
-    <a href="index.html"><img src="buttons.png"></a>
+    <img src="cscbannernew.jpg" alt="">
+    <table width="800px"> 
+        <tr>
+            <td align="center">
+    <a href="aboutme.html"><button>aboutme</button></a>
+        </td>
+        <td align="center">
+    <a href="javascripts.html"><button>javascripts</button></a> 
+    </td>
+    <td align="center">
+    <a href="index.html"><button>home</button></a>
+   </td>
+</tr>
+</table>
     <p>Welcome to my website!</p>
+Hi my name is Jason, this website is just a little about me and what I like to do. I already added a link on what I like to do and my some of my hobbies. This website will also be a portfolio about myself and as well as a resume. Im looking forward to become an even better programmer to see where it can bring me.
     <p>Thanks for visiting. To learn more about me <a href="aboutme.html">click here</a> 
 </body>
 </html>
