--- a/aboutme.html
+++ b/aboutme.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Jason</title>
+    <link rel ="stylesheet" href="mystyle.css">
+
 </head>
 <body>
     <h1>About Jason</h1>
-    <img src="csc pic 1.jpeg" alt="">
-    <a href="aboutme.html"><img src="button2.png" alt=""></a>
-    <a href="javascripts.html"><img src="button3.png"></a> 
-    <a href="index.html"><img src="buttons.png"></a>
+    <table width="800px"> 
+        <tr>
+            <td align="center">
+    <a href="aboutme.html"><button>aboutme</button></a>
+        </td>
+        <td align="center">
+    <a href="javascripts.html"><button>javascripts</button></a> 
+    </td>
+    <td align="center">
+    <a href="index.html"><button>home</button></a>
+   </td>
+</tr>
+</table>
     <h2>Jason's Hobbies</h2>
     <ul>
         <li>Basketball</li>
