--- a/javascripts.html
+++ b/javascripts.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel ="stylesheet" href="mystyle.css">
+
 </head>
 <body>
-    <img src="csc pic 1.jpeg" alt="">
+    <img src="cscbannernew.jpg" alt="">
     <a href="aboutme.html"><img src="button2.png" alt=""></a>
     <a href="javascripts.html"><img src="button3.png"></a> 
     <a href="index.html"><img src="buttons.png"></a>
