--- a/javascripts.html
+++ b/javascripts.html
@@ -8,9 +8,22 @@
 
 </head>
 <body>
-    <img src="cscbannernew.jpg" alt="">
-    <a href="aboutme.html"><img src="button2.png" alt=""></a>
-    <a href="javascripts.html"><img src="button3.png"></a> 
-    <a href="index.html"><img src="buttons.png"></a>
+    <h2><a href="https://www.khanacademy.org/computer-programming/bitmoji/6439343746760704">bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/bitmoji/6439343746760704/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+    
+    
+    <table width="800px"> 
+        <tr>
+            <td align="center">
+    <a href="aboutme.html"><button>aboutme</button></a>
+        </td>
+        <td align="center">
+    <a href="javascripts.html"><button>javascripts</button></a> 
+    </td>
+    <td align="center">
+    <a href="index.html"><button>home</button></a>
+   </td>
+</tr>
+
+</table>
 </body>
 </html>
