--- a/javascripts.html
+++ b/javascripts.html
@@ -8,10 +8,7 @@
 
 </head>
 <body>
-    <h2><a href="https://www.khanacademy.org/computer-programming/bitmoji/6439343746760704">bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/bitmoji/6439343746760704/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
-    
-    
-    <table width="800px"> 
+    <h2><a href="https://www.khanacademy.org/computer-programming/gomez_resizebitmoji/6393511458684928">Gomez_resizeBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/gomez_resizebitmoji/6393511458684928/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p> <a href="http://www.khanacademy.org/computer-programming"></a></p>    <table width="800px"> 
         <tr>
             <td align="center">
     <a href="aboutme.html"><button>aboutme</button></a>
