--- a/javascripts.html
+++ b/javascripts.html
@@ -8,8 +8,7 @@
 
 </head>
 <body>
-    <h2><a href="https://www.khanacademy.org/computer-programming/jasons-medical-tree/5431080404172800">jasons medical tree</a></h2><script src="https://www.khanacademy.org/computer-programming/jasons-medical-tree/5431080404172800/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>        <tr>
-            <td align="center">
+    <h2><a href="https://www.khanacademy.org/computer-programming/gomez_dance-floor-loop-2/4587130806124544">gomez_dance floor loop 2</a></h2><script src="https://www.khanacademy.org/computer-programming/gomez_dance-floor-loop-2/4587130806124544/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><a href="http://www.khanacademy.org/computer-programming">            <td align="center">
     <a href="aboutme.html"><button>aboutme</button></a>
         </td>
         <td align="center">
