--- a/javascripts.html
+++ b/javascripts.html
@@ -8,7 +8,12 @@
 
 </head>
 <body>
+    <h2><a href="https://www.khanacademy.org/computer-programming/bitmoji-racing/6439343746760704">bitmoji racing</a></h2><script src="https://www.khanacademy.org/computer-programming/bitmoji-racing/6439343746760704/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><a href="http://www.khanacademy.org/computer-programming"/p>
+        <h2><a href="https://www.khanacademy.org/computer-programming/gomez_dancingbitmojifun/4879626469687296">gomez_dancingbitmojifun</a></h2><script src="https://www.khanacademy.org/computer-programming/gomez_dancingbitmojifun/4879626469687296/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><a href="http://www.khanacademy.org/computer-programming"
+        <h2><a href="https://www.khanacademy.org/computer-programming/jasons-medical-tree/5431080404172800">jasons medical tree</a></h2><script src="https://www.khanacademy.org/computer-programming/jasons-medical-tree/5431080404172800/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p> <a href="http://www.khanacademy.org/computer-programming"></a></p>
+        
     <h2><a href="https://www.khanacademy.org/computer-programming/gomez_dance-floor-loop-2/4587130806124544">gomez_dance floor loop 2</a></h2><script src="https://www.khanacademy.org/computer-programming/gomez_dance-floor-loop-2/4587130806124544/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><a href="http://www.khanacademy.org/computer-programming">            <td align="center">
+        <h2><a href="https://www.khanacademy.org/computer-programming/json-array/4788644371808256">Json array</a></h2><script src="https://www.khanacademy.org/computer-programming/json-array/4788644371808256/embed.js?editor=no&buttons=no&author=no&embed=yes"></script> <a href="http://www.khanacademy.org/computer-programming"</p>
     <a href="aboutme.html"><button>aboutme</button></a>
         </td>
         <td align="center">
